<resources>
    <string name="app_name">Beosis</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_view">Image View</string>
    <string name="text_view">Text View</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_signin">SigninActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="reset">Reset</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="don_t_have_account_yet">Don’t have account yet ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="helping_you_finding_scholarship_to_study_abroad">Helping you finding scholarship to study abroad.</string>
    <string name="beosis">Beosis</string>
    <string name="send_email">Send Email</string>
    <string name="edit_text">Edit Text</string>
    <string name="error_text">Please enter, its error</string>
    <string name="text_user">Users</string>
    <string name="error_register">Register Failed</string>
    <string name="deadline_07_january_2022">Deadline : 07 January 2022</string>
    <string name="south_korea">South Korea</string>
    <string name="korea_advanced_institute">Korea Advanced Institute</string>
    <string name="kaist">KAIST</string>
    <string name="txt_error">Not empty</string>
    <string name="txt_error_password">Password Mismatch</string>
    <string name="txt_user">User</string>
    <string name="txt_error_register">Register Failed</string>
    <string name="interested_country">Interested Country</string>
    <string name="name">Name</string>
    <string name="log_out">Log Out</string>
    <string name="interested_major">Interested Major</string>
    <string name="most_popular">Most Popular</string>
    <string name="explore_more">Explore More</string>
    <string name="calendar">Calendar</string>
    <string name="article">Article</string>
    <string name="asia">Asia</string>
    <string name="america">America</string>
    <string name="europe">Europe</string>
    <string name="australia">Australia</string>
    <string name="africa">Africa</string>
    <string name="home">Home</string>
    <string name="save">Save</string>
    <string name="profile">Profile</string>
    <string name="filter">Filter</string>
    <string name="continents">Continents</string>
    <string name="degree">Degree</string>
    <string name="apply">Apply</string>
    <string name="undergraduate">Undergraduate</string>
    <string name="postgraduate">Postgraduate</string>
    <string name="graduate">Graduate</string>
    <string name="month_20xx">Month 20XX</string>
    <string name="korea_advanced_institute_of_science_and_technology">Korea Advanced Institute of Science and Technology</string>
    <string name="subjects_dummy">Natural Science, Life Sciences and Technology, Engineering, ICT, Business</string>
    <string name="open_registration_08_november_2021">Open registration : 08 November 2021</string>
    <string name="benefit">Benefit</string>
    <string name="benefit_text">- return air travel <br /> - a one off establishment allowance on arrival <br /> - full tuition fees <br /> - contribution to living expenses <br /> - introductory academic program <br />
    - overseas student health cover <br /> - fieldwork allowance for research students and masters <br /> - by coursework which has a compulsory fieldwork</string>
    <string name="requirements_text">- Newly arrived international students, aged 30 and less during the course of the selection year. <br /> - Students of foreign nationality living on the French soil for less than a year, previously or currently enrolled in a training course or internship that does not lead to certification. <br /> - Students of foreign nationality living on the French soil for less than a year, taking language classes (type FFL). <br /> - Students who have lived in France in the past, within the framework of a mobility programme during their studies (e.g. Erasmus Mundus Joint Master’s Degrees, exchange programme…) that did not lead to certification.</string>
    <string name="requirements">Requirements</string>
    <string name="more_information">More Information</string>
    <string name="image_button">Image Button</string>
    <string name="tv_title_detailarticle">Cost of Living in Malaysia: Travel and Stay for International Students</string>
    <string name="tv_content_detailarticle">A major advantage for international students who choose to study in Malaysia is the reasonable cost of living. The total expenditure for accommodation, either on-campus or off-campus is very affordable. While your actual cost of living will depend on the location of your accommodation and your personal lifestyle, students will be pleased to know that KL has been ranked one of the least expensive cities in the world to live in. For most students, a monthly budget of RM2,000 (US$500) will provide them with a rather comfortable living in Malaysia. Breakdown of living cost in Malaysia Accommodation You should estimate about RM300 (US$75) to RM600 (US$150) for your accommodation per month. The rental will vary depending on the geographical area, the type of accommodation (on-campus living in a hall of residence; or off-campus living in an apartment, condominium, single-storey house, double-storey house, etc.), the facilities provided in the house (e.g. with or without air-conditioning) and of course, the number of people sharing the room (or the apartment or house). Food and housekeeping Your food and housekeeping expenses are estimated to be around RM600-900 (US$150-225). This is based on about RM20-30 (US$5-7.50) for three meals per day. Naturally, if you cook and share the cooking expenses with your friends, it would be cheaper. It’s possible to have a fast food meal for below RM10 (US$2.50) in Malaysia. For example, you can get a McValue meal at McDonald’s for RM10-20. You can also get meal sets at KFC and pizza deals for group meals from Domino’s at below RM10 per pax. Local food like rice and noodles at food stalls or coffee shops range from RM5-10 (US$1-2.50). At mid-range restaurants, you can expect to pay RM20-40 for a meal (US$5-10). A coffee from Starbucks costs an average of RM12-16 (US$3-4). Clothing and laundry Your laundry expenses like washing and using the dryer at a self-service laundromat cost around RM10 each time. Clothing expenses vary according to your taste and how often you indulge in new clothes. Public transport Students who stay on campus or near campus may not incur any cost of travelling to and from classes. However, other travelling may cost approximately RM80-150 (US$20-37.50) per month. Telecommunication / mobile phone bills and utilities The mobile phone packages in Malaysia are very competitive. How much you spend will depend on your usage and the promotional package you choose. The average student may spend about RM30-50 (US$7.50-12.50) per month. Books, reading materials and stationery The estimated cost of books and stationery should be around RM50-100 (US$12.50-25) per month, but it would largely depend on the course you have signed up for and the number and nature of projects in your course. Medical and hospitalisation insurance Although you may not need to pay for medical expenses every month, if you put aside RM50 (US$12.50) per month, it would be sufficient for you in case you need outpatient treatment at a private clinic during the year. This estimate does not include the amount you will have to pay for your medical and hospitalisation insurance of about RM500 (US$125) per year. Personal expenses Your monthly personal expenses largely depend on your personal lifestyle. However, the cost can be estimated to be between RM100 (US$25) and RM200 (US$50). This includes your socialising needs, toiletries, haircut, clothes, movie, etc. Using the estimate above, the total cost of living for a student will average at RM2,000 (US$500) per month or RM24,000 (US$6,000) per year. It is important to remember that the above estimate is only a guide in planning your budget to study in Malaysia and geographical location and personal lifestyle should be factored in when planning your personal budget. Copyright © 2020 by Webway e-Services (StudyMalaysia.com) Source : Link Here</string>
    <string name="malaysia">Malaysia</string>
    <string name="open_registration">Open Registration :</string>
    <string name="close_registration">Close Registration :</string>
    <string name="link_scholarship">please visit <a href="www.example.com">example.com</a></string>
    <string-array name="logo_scholarship">
        <item>https://ibb.co/fDq12JX</item>
        <item>https://ibb.co/s9KgGGy</item>
        <item>https://ibb.co/cL2TBb9</item>
        <item>https://ibb.co/F8FFFH0</item>
        <item>https://ibb.co/X3M1HDJ</item>
        <item>https://ibb.co/tKmgM0f</item>
        <item>https://ibb.co/9Ty2pfs</item>
        <item>https://ibb.co/gTynQ3Y</item>
        <item>https://ibb.co/0hgQZZr</item>
        <item>https://ibb.co/HFLxLnM</item>
    </string-array>
    <string-array name="name_scholarship">
        <item>China AUN Scholarship</item>
        <item>MEXT</item>
        <item>Sophia University New Students Scholarship</item>
        <item>Mitsui Bussan Scholarship</item>
        <item>Asean Undergraduate Scholarship</item>
        <item>IOE Centenary Master’s Scholarship</item>
        <item>Université Paris-Saclay International Master’s Scholarships</item>
        <item>DAAD EPOS</item>
        <item>University of Birmingham Global Masters Scholarship</item>
        <item>University of Twente Scholarships (UTS)</item>
    </string-array>
    <string-array name="university_scholarship">
        <item>Selected host university</item>
        <item>Kyoto University, Ritsumeikan Asia Pacific University, The university of Tokyo</item>
        <item>Sophia University</item>
        <item>Any universities in Japan</item>
        <item>National University Singapore</item>
        <item>University College London</item>
        <item>Université Paris-Saclay</item>
        <item>HTW Berlin, U Bonn, TU Dresden, U Hannover, U Stuttgart, U Flensbrug</item>
        <item>University of Birmingham</item>
        <item>University of Twente</item>
    </string-array>
    <string-array name="country_scholarship">
        <item>China</item>
        <item>Japan</item>
        <item>Japan</item>
        <item>Japan</item>
        <item>Singapore</item>
        <item>United Kingdom</item>
        <item>France</item>
        <item>Germany</item>
        <item>United Kingdom</item>
        <item>Netherlands</item>
    </string-array>
</resources>