<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginBottom="20dp"
    android:background="@drawable/background_item"
    android:elevation="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:elevation="40dp">

        <ImageView
            android:id="@+id/iv_image_mostpopular"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="17dp"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginEnd="@dimen/_10dp"
            android:layout_marginRight="@dimen/_10dp"
            android:layout_marginBottom="@dimen/_10dp"
            android:contentDescription="@string/image_view"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_title_mostpopular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/iv_image_mostpopular"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/_10dp"
            android:layout_toEndOf="@+id/iv_image_mostpopular"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_bold"
            android:maxLines="1"
            android:text="@string/kaist"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_uni_mostpopular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_title_mostpopular"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="@dimen/_10dp"
            android:layout_toEndOf="@+id/iv_image_mostpopular"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_light"
            android:maxLines="1"
            android:text="@string/korea_advanced_institute"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_country_mostpopular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_uni_mostpopular"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="@dimen/_10dp"
            android:layout_toEndOf="@+id/iv_image_mostpopular"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_light"
            android:maxLines="1"
            android:text="@string/south_korea"
            android:textColor="#858585"
            android:textSize="16sp"  />

        <TextView
            android:id="@+id/tv_level_mostpopular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_country_mostpopular"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="@dimen/_10dp"
            android:layout_toEndOf="@+id/iv_image_mostpopular"
            android:background="@drawable/background_item_degree"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/undergraduate"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="13sp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>